fix layout issues in profile, search, collection, and home page

--- a/public/Styles/_sideNav.scss
+++ b/public/Styles/_sideNav.scss
@@ -13,9 +13,11 @@
         display: flex;
         align-items: center;
         cursor: pointer;
-        //margin-top: auto;
         &--icon{
             padding-right: 0.8rem;
+        }
+        &--logout{
+            margin-top: auto;
         }
     }
 }
